Version 1.0.0 (26 Nov 2004)

  * packaging changes:
    - renamed 'libgig.pc.in' -> 'gig.pc.in' and renamed pkg-config lib name
      'libgig' -> 'gig' as it's common practice to omit the 'lib' prefix
    - fixed man pages automake install rule (which didn't work on Mandrake,
      SuSE and Fedora)
    - fixed generation of Doxygen API documentation (now also included in
      RPM and Debian packages)

  * src/gig.cpp, src/gig.h:
    - fixed / improved accuracy of all three velocity to volume
      transformation functions a.k.a. 'nonlinear','linear','special'
      (patch by Andreas Persson)
    - denormals are filtered from the velocity to volume tables
    - bugfix for dimension region switching (wrong handling of the release
      trigger dimension, no bit range check for dimensions of split type
      'split_type_bit')
    - fixed panorama value in DimensionRegion (invalid conversion from
      signed 7 bit to signed 8 bit)
    - added class attribute 'Layers' to class 'gig::Region'
    - symbol prototyping of gig::Region (fixes build failure with qsampler)

  * src/gigextract.cpp:
    - added support for libsndfile (if libaudiofile and libsndfile are
      available then libsndfile is preferred)

  * src/gigdump.cpp:
    - added printout for dimension informations (amount, type, bits, zones)
    - added printout for velocity response curve parameters
    - added printout for crossfade definitions
    - added printout for panorama value for each DimensionRegion
    - replaced printout of DLS Region layer by printout of amount of
      Gigasampler layers

Version 0.7.1 (2 Jul 2004)

  * packaging changes:
    - added libgig.spec and libgig.pc package configurations for generating
      Redhat packages
    - header files included on installation.
    - autotools-generated files removed from CVS repository.
    - added support for generating Debian packages
    - version of shared library can be set in configure.in

Version 0.7.0 (3 May 2004)
